# SDU-Math-Common

./: .cproject  .project  CMakeLists.txt  README.md  package.xml
sdu_math/: CMakeLists.txt  Makefile  cmake_install.cmake  package.xml
sdu_math/include/sdu_math/: control_function.h  end_point_to_rad_cal.h  fifth_order_trajectory_generate.h  kinematics.h  statics_math.h  statistics_math.h
sdu_math/src/: control_function.cpp  end_point_to_rad_cal.cpp  fifth_order_trajectory_generate.cpp  kinematics.cpp  statics_math.cpp  statistics_math.cpp
